--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
     "dev": "nodemon index.js"
   },
   "engines": {
-    "node": "16.19.0"
+    "node": "18.14.1"
   },
   "dependencies": {
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "helmet": "^6.0.1"
+    "helmet": "^6.0.1",
+    "jsonwebtoken": "^9.0.0",
+    "nodemailer": "^6.9.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
