--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "sverok-man-project-api",
   "private": true,
   "version": "0.0.0",
-  "main": "index.js",
+  "type": "module",
+  "main": "index.mjs",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node index.mjs",
+    "dev": "nodemon index.mjs"
   },
   "engines": {
     "node": "18.14.2"
