--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "main": "index.mjs",
+  "main": "index.ts",
   "scripts": {
-    "start": "node index.mjs",
-    "dev": "nodemon index.mjs"
+    "start": "tsc --project tsconfig.json && node dist/index.js",
+    "dev": "nodemon index.ts",
+    "build": "tsc --project tsconfig.json && copyfiles .env dist && copyfiles database/db.json dist/database"
   },
   "engines": {
     "node": "18.14.2"
@@ -18,9 +19,18 @@
     "express": "^4.18.2",
     "helmet": "^6.0.1",
     "jsonwebtoken": "^9.0.0",
-    "nodemailer": "^6.9.1"
+    "nodemailer": "^6.9.1",
+    "zod": "^3.20.6"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20"
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.1",
+    "@types/node": "^18.14.2",
+    "@types/nodemailer": "^6.4.7",
+    "copyfiles": "^2.4.1",
+    "nodemon": "^2.0.20",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.5"
   }
 }
