--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "main": "index.ts",
+  "main": "dist/index.js",
   "scripts": {
-    "start": "tsc --project tsconfig.json && node dist/index.js",
-    "dev": "nodemon index.ts",
+    "start": "ts-node dist/index.js",
+    "dev": "ts-node index.ts",
     "build": "tsc --project tsconfig.json && copyfiles .env dist && copyfiles database/db.json dist/database"
   },
   "engines": {
@@ -29,7 +29,6 @@
     "@types/node": "^18.14.2",
     "@types/nodemailer": "^6.4.7",
     "copyfiles": "^2.4.1",
-    "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   }
