--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sverok-man-project-api",
+  "name": "kalejdoskop-api",
   "private": true,
   "version": "0.0.0",
   "type": "module",
