--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,10 @@ dist-ssr
 *.local
 
 # Editor directories and files
+.env
+dev.db
+
+# Editor directories and files
 .vscode/*
 !.vscode/extensions.json
 .idea
