--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "ts-node dist/index.js",
     "dev": "ts-node index.ts",
-    "build": "tsc --project tsconfig.json && copyfiles .env dist"
+    "build": "npm install && tsc --project tsconfig.json && copyfiles .env dist"
   },
   "engines": {
     "node": "18.16.0"
