created a better README & minor .env.example fix

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@
 SECRET_USER=
 SECRET_PASS=
 
-# Database
+# Project Key
 SECRET_KEY=
 
 # First time user
@@ -11,6 +11,8 @@ SECRET_NAME=
 
 # CORS
 ALLOWED_ORIGINS=
+
+# API Key
 SECRET_API_KEY=
 
 # This was inserted by `prisma init`:
