--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "kalejdoskop-api",
   "private": true,
-  "version": "0.9.0",
+  "version": "0.9.5",
   "type": "module",
   "main": "dist/index.js",
   "scripts": {
@@ -20,8 +20,7 @@
     "express": "^4.18.2",
     "helmet": "^6.0.1",
     "jsonwebtoken": "^9.0.0",
-    "nodemailer": "^6.9.1",
-    "zod": "^3.20.6"
+    "nodemailer": "^6.9.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
