--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.18.2",
     "helmet": "^6.0.1",
     "jsonwebtoken": "^9.0.0",
+    "node-cron": "^3.0.2",
     "nodemailer": "^6.9.1"
   },
   "devDependencies": {
@@ -27,6 +28,7 @@
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.14.2",
+    "@types/node-cron": "^3.0.7",
     "@types/nodemailer": "^6.4.7",
     "copyfiles": "^2.4.1",
     "prisma": "^4.15.0",
