--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
   "scripts": {
     "start": "ts-node dist/index.js",
     "dev": "ts-node index.ts",
-    "build": "npm install && tsc --project tsconfig.json && copyfiles .env dist"
+    "build": "npm install && tsc --project tsconfig.json && copyfiles .env dist",
+    "overwrite": "node dist/scripts/overwriteFile.js"
   },
   "engines": {
     "node": "18.16.1"
   },
   "dependencies": {
-    "@prisma/client": "^4.15.0",
+    "@prisma/client": "^4.16.2",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -31,7 +32,7 @@
     "@types/node-cron": "^3.0.7",
     "@types/nodemailer": "^6.4.7",
     "copyfiles": "^2.4.1",
-    "prisma": "^4.15.0",
+    "prisma": "^4.16.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   }
