--- a/package.json
+++ b/package.json
@@ -7,11 +7,10 @@
   "scripts": {
     "start": "ts-node dist/index.js",
     "dev": "ts-node index.ts",
-    "build": "npm install && tsc --project tsconfig.json && copyfiles .env dist",
-    "overwrite": "node dist/scripts/overwriteFile.js"
+    "build": "npm install && tsc --project tsconfig.json && copyfiles .env dist"
   },
   "engines": {
-    "node": "18.16.1"
+    "node": "18.17.0"
   },
   "dependencies": {
     "@prisma/client": "^4.16.2",
@@ -21,7 +20,6 @@
     "express": "^4.18.2",
     "helmet": "^6.0.1",
     "jsonwebtoken": "^9.0.0",
-    "node-cron": "^3.0.2",
     "nodemailer": "^6.9.1"
   },
   "devDependencies": {
@@ -29,7 +27,6 @@
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.14.2",
-    "@types/node-cron": "^3.0.7",
     "@types/nodemailer": "^6.4.7",
     "copyfiles": "^2.4.1",
     "prisma": "^4.16.2",
